# email-rs

./: Cargo.toml  README.md
benches/: example.rs
src/: lib.rs  mime.rs  parse.rs  rfc2045.rs  rfc2046.rs  rfc2822.rs  rfc5322.rs  util.rs
src/rfc2822/: address.rs  atom.rs  datetime.rs  fields.rs  folding.rs  message.rs  misc.rs  mod.rs  obsolete.rs  primitive.rs  quoted.rs
tests/: example_4.eml  example_6_1.eml  lib.rs
