[package]
name = "mail"
version = "0.1.0"
authors = ["Ryan Michael <kerinin@gmail.com>"]

[lib]
name = "mail"
path = "src/lib.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"

[dependencies]
chomp = "*"
chrono = "*"
bytes = "0.3.0"
log = "0.3"
env_logger = "*"

[[bench]]
name = "example"
harness = false
