[package]
name = "mail"
version = "0.1.0"
authors = ["Ryan Michael <kerinin@gmail.com>"]

[profile.release]
debug = true

[lib]
name = "mail"
path = "src/lib.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bench]]
name = "example"
harness = false

[dependencies]
chomp = "*"
chrono = "*"
bytes = "0.3.0"
log = "0.3"
env_logger = "*"
bencher = "*"
